tests/invalid/03_tipo_invalido.mini0
// Tipo no reconocido

fun main()
    x: float
end